compiler/driver/tests/snapshots/diagnostics_snapshots__diag_return_ref_to_local.snap
---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error[E035]: cannot return reference to local variable; value does not live long enough
  --> diag_return_ref_to_local.ny:1:1
   |
  1 | fn bad() -> &i32 {
   | ^
   |
  2 |     let x = 1
   |
  3 |     return &x
   |
  4 | }
